--- a/style.css
+++ b/style.css
@@ -8,10 +8,33 @@
   padding: 0;
 }
 
+.nav a,
+.header .header-links a {
+  text-decoration: none;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 26px;
+  width: 10rem;
+
+  box-shadow: 0 1px 20px rgba(0, 0, 0, 0.8);
+  transition: all 0.3s ease-in-out;
+  position: relative;
+  display: inline-block;
+}
+
+.nav a:hover,
+.header .header-links a:hover {
+  transform: scale(1.05, 1.05);
+  box-shadow: 0px 0px 20px 1px rgb(255, 255, 255, 0.55);
+
+  background-color: white;
+  color: black;
+}
+
 .container {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: 0.6fr 0.3fr 5fr 0.3fr;
+  grid-template-rows: 0.6fr 0.3fr 5fr;
   gap: 5px;
   text-align: center;
 }
@@ -160,7 +183,6 @@
 
 .footer {
   grid-column: 1 / 3;
-  grid-row: 4 / 5;
   background-color: var(--primary);
 }
 
