--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 .nav a:hover,
 .header .header-links a:hover {
   transform: scale(1.05, 1.05);
-  box-shadow: 0px 0px 20px 1px rgb(255, 255, 255, 0.55);
+  box-shadow: 0px 0px 10px 1px rgb(255, 255, 255, 0.8);
 
   background-color: white;
   color: black;
@@ -64,7 +64,7 @@
 .header-logo img {
   background-color: var(--accent);
   border-radius: 40px;
-  width: 75px;
+  width: 90px;
   cursor: pointer;
 
   box-shadow: 0 1px 20px rgba(0,0,0,0.8);
@@ -75,7 +75,7 @@
 
 .header-logo img:hover {
   transform: scale(1.1, 1.1);
-  box-shadow: 0px 0px 35px 1px rgba(0,0,0,1);
+  box-shadow: 0px 0px 35px 1px rgba(0,0,0,0.5);
 }
 
 .header-links {
@@ -156,6 +156,7 @@
   color: var(--primary);
   text-align: left;
   border-radius: 12px;
+  cursor: pointer;
 
   box-shadow: 0 1px 2px rgba(0,0,0,0.15);
   transition: all 0.3s ease-in-out;
